--- a/style.css
+++ b/style.css
@@ -7,7 +7,21 @@ body {
 }
 
 .turn {
-    margin: 25px 0 75px 0;
+    margin: 25px 0 50px 0;
+}
+
+button {
+    background-color: #fff;
+    color: #212845;
+    width: 100px;
+    height: 50px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    margin-bottom: 25px;
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 .board {
